Bug 283205 - Selecting new payee while editing one payee
Summary: Selecting new payee while editing one payee
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-02 20:08 UTC by schlatter@phys.ethz.ch
Modified: 2011-10-22 07:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description schlatter@phys.ethz.ch 2011-10-02 20:08:57 UTC
Version:           4.5.3 (using KDE 4.6.2) 
OS:                Linux

Apparently, one should not select a different payee before the changes to the currently selected payee are saved. The mechanism that automatically asks to save unsaved changes is broken.

Reproducible: Always

Steps to Reproduce:
How to reproduce:

- go to payees
- select a payee
- modify it (e.g., change matching)
- click on a different payee (*without* saving the changes)
- A popup asks to save the changes => click yes
- The popup appears again asking the same question. I consider this a bug.
- click yes again
- Another popup (named "Question") says: "A payee with this name already exists. blablabla. Rename?". This is again unexpected and should not happen.

Depending on whether I click yes or no, different things happen:

NO:
- The second payee is renamed to ''. (Again: This should not happen)

YES:
- Another popup appears ("sorry") saying something like "Unable to modify payee"


Actual Results:  
After that, the program seems to work normally (of course, the payee remains renamed '')

Expected Results:  
I expect that KMyMoney saves my unsaved changes if I click yes in the first popup. After that, it should simply show the information on the payee I have selected.

OS: Linux (i686) release 2.6.38-11-generic-pae
Compiler: cc
Comment 1 Thomas Baumgart 2011-10-03 05:35:46 UTC
I was able to reproduce the problem even on 4.6.0.  In addition to the above description: the message box appears two times at once (you can verify that by moving the first window which will show you the second one). I think that this might be a key to the solution.
Comment 2 Thomas Baumgart 2011-10-03 07:52:58 UTC
SVN commit 1257064 by tbaumgart:

Fix to make changes to payee data persistent upon selection of another payee

Needs backport to stable branch

BUG: 283205

 M  +14 -7     kpayeesview.cpp  
 M  +1 -1      kpayeesview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1257064
Comment 3 Cristian Oneț 2011-10-22 07:55:19 UTC
SVN commit 1260146 by conet:

Fix to make changes to payee data persistent upon selection of another payee

Backported to stable branch.

BUG: 283205



 M  +14 -7     kpayeesview.cpp  
 M  +1 -1      kpayeesview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1260146