Fix to make changes to payee data persistent upon selection of another payee

Needs backport to stable branch

BUG: 283205

svn path=/trunk/extragear/office/kmymoney/; revision=1257064